@@ -23,6 +23,7 @@ For fixes or providing information which led to a fix:
           David Allouche
 	 Martin Baulig
         Fabrice Bauzac
+          Carlo Bramini
             Rob Browning
          Adrian Bunk
         Michael Carmack
