@@ -10,6 +10,7 @@ Changes in 1.8.7 (since 1.8.6)
 * Bugs fixed
 
 ** Fix %fast-slot-ref/set!, to avoid possible segmentation fault
+** Fix MinGW build problem caused by HAVE_STRUCT_TIMESPEC confusion
 
 
 Changes in 1.8.6 (since 1.8.5)
